@@ -23,7 +23,7 @@ class InvalidateMemCache(BrowserView):
             if not uid:
                 continue
             event.notify(InvalidateCacheEvent(raw=True, dependencies=[uid]))
-        return 'Memcache invalidated for relatedItems'
+        return 'Memcache invalidated for relatedItems.'
 
     def backRefs(self, **kwargs):
         """ Invalidate back references
@@ -34,14 +34,14 @@ class InvalidateMemCache(BrowserView):
             if not uid:
                 continue
             event.notify(InvalidateCacheEvent(raw=True, dependencies=[uid]))
-        return 'Memcache invalidated for back references'
+        return 'Memcache invalidated for back references.'
 
     def __call__(self, **kwargs):
         uid = queryAdapter(self.context, IUUID)
         if not uid:
             return "Can't invalidate memcache. Missing uid adapter."
         event.notify(InvalidateCacheEvent(raw=True, dependencies=[uid]))
-        return "Memcache invalidated"
+        return " Memcache invalidated."
 
 
 class InvalidateVarnish(BrowserView):
@@ -57,7 +57,7 @@ class InvalidateVarnish(BrowserView):
                 (item, self.request), name='varnish.invalidate',
                 default=lambda:None)
             invalidate_cache()
-        return 'Varnish invalidated for relatedItems'
+        return 'Varnish invalidated for relatedItems.'
 
     def backRefs(self, **kwargs):
         """ Invalidate back references
@@ -68,11 +68,11 @@ class InvalidateVarnish(BrowserView):
                 (item, self.request), name='varnish.invalidate',
                 default=lambda:None)
             invalidate_cache()
-        return 'Varnish invalidated for back references'
+        return 'Varnish invalidated for back references.'
 
     def __call__(self, **kwargs):
         if not VARNISH:
-            return "Varnish invalidated"
+            return " Varnish invalidated."
 
         try:
             if VARNISH.purge.isPurged(self.context):
@@ -80,7 +80,7 @@ class InvalidateVarnish(BrowserView):
         except Exception, err:
             logger.exception(err)
 
-        return "Varnish invalidated"
+        return " Varnish invalidated."
 
 
 class InvalidateCache(BrowserView):
@@ -96,7 +96,7 @@ class InvalidateCache(BrowserView):
                 (item, self.request), name='cache.invalidate',
                 default=lambda:None)
             invalidate_cache()
-        return 'Cache invalidated for relatedItems'
+        return 'Cache invalidated for relatedItems.'
 
     def backRefs(self, **kwargs):
         """ Invalidate back references
@@ -107,7 +107,7 @@ class InvalidateCache(BrowserView):
                 (item, self.request), name='cache.invalidate',
                 default=lambda:None)
             invalidate_cache()
-        return 'Cache invalidated for back references'
+        return 'Cache invalidated for back references.'
 
     def __call__(self, **kwargs):
         # Memcache
@@ -120,4 +120,4 @@ class InvalidateCache(BrowserView):
                                                 name='varnish.invalidate')
         invalidate_varnish()
 
-        return "Varnish and Memcache invalidated"
+        return 'Varnish and Memcache invalidated.'
